test html render

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+          engineInitializer.initializeEngine({
+      renderer: "html" ,
+    }).then(function(appRunner) {
             appRunner.runApp();
           });
         }
