update useHtml = false;

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
   <script>
     window.addEventListener('load', function(ev) {
-      let useHtml = true;
+      let useHtml = false;
 
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
